force-app/main/default/objects/Invoice_Number_Series__c/Invoice_Number_Series__c.object-meta.xml
<CustomObject>
    <label>Invoice Number Series</label>
    <nameField>
        <label>Series Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Number Series</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>