force-app/main/default/objects/Invoice_Number_Series__c/fields/End_Number__c.field-meta.xml
<CustomField>
    <fullName>End_Number__c</fullName>
    <label>End Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>