force-app/main/default/objects/Invoice_Number_Series__c/fields/FY__c.field-meta.xml
<CustomField>
    <fullName>FY__c</fullName>
    <label>FY</label>
    <length>5</length>
    <type>Text</type>
</CustomField>