force-app/main/default/objects/Invoice_Number_Series__c/fields/Invoice_number_prefix__c.field-meta.xml
<CustomField>
    <fullName>Invoice_number_prefix__c</fullName>
    <label>Invoice number prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>