force-app/main/default/objects/Invoice_Number_Series__c/fields/Invoice_Post_fix__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Post_fix__c</fullName>
    <label>Invoice Post fix</label>
    <length>100</length>
    <type>Text</type>
</CustomField>