force-app/main/default/objects/Invoice_Number_Series__c/fields/Last_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_Number__c</fullName>
    <label>Last Invoice Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>