force-app/main/default/objects/Invoice_Number_Series__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Route__c</columns>
    <columns>Start_Number__c</columns>
    <columns>End_Number__c</columns>
    <columns>Invoice_number_prefix__c</columns>
    <columns>Invoice_Post_fix__c</columns>
    <columns>Last_Invoice_Number__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>